# liyi

./: .editorconfig  .liyiignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT.txt  README.md  README.zh.md  SECURITY.md
crates/liyi/: Cargo.toml
crates/liyi-cli/: Cargo.toml
crates/liyi-cli/src/: cli.rs  cli.rs.liyi.jsonc  main.rs  main.rs.liyi.jsonc  tui_approve.rs  tui_approve.rs.liyi.jsonc
crates/liyi/src/: approve.rs  approve.rs.liyi.jsonc  check.rs  check.rs.liyi.jsonc  diagnostics.rs  diagnostics.rs.liyi.jsonc  discovery.rs  discovery.rs.liyi.jsonc  git.rs  git.rs.liyi.jsonc  hashing.rs  hashing.rs.liyi.jsonc  init.rs  init.rs.liyi.jsonc  lib.rs  markers.rs  markers.rs.liyi.jsonc  prompt.rs  prompt.rs.liyi.jsonc  reanchor.rs  reanchor.rs.liyi.jsonc  recovery.rs  recovery.rs.liyi.jsonc  schema.rs  schema.rs.liyi.jsonc  shift.rs  shift.rs.liyi.jsonc  sidecar.rs  sidecar.rs.liyi.jsonc  tree_path.rs  tree_path.rs.liyi.jsonc
crates/liyi/src/tree_path/: lang_bash.rs  lang_bash.rs.liyi.jsonc  lang_c.rs  lang_c.rs.liyi.jsonc  lang_cpp.rs  lang_cpp.rs.liyi.jsonc  lang_csharp.rs  lang_csharp.rs.liyi.jsonc  lang_dart.rs  lang_dart.rs.liyi.jsonc  lang_go.rs  lang_go.rs.liyi.jsonc  lang_java.rs  lang_java.rs.liyi.jsonc  lang_javascript.rs  lang_javascript.rs.liyi.jsonc  lang_json.rs  lang_json.rs.liyi.jsonc  lang_kotlin.rs  lang_kotlin.rs.liyi.jsonc  lang_objc.rs  lang_objc.rs.liyi.jsonc  lang_php.rs  lang_php.rs.liyi.jsonc  lang_python.rs  lang_python.rs.liyi.jsonc  lang_ruby.rs  lang_ruby.rs.liyi.jsonc  lang_rust.rs  lang_rust.rs.liyi.jsonc  lang_swift.rs  lang_swift.rs.liyi.jsonc  lang_toml.rs  lang_toml.rs.liyi.jsonc  lang_typescript.rs  lang_typescript.rs.liyi.jsonc  lang_yaml.rs  lang_yaml.rs.liyi.jsonc  lang_zig.rs  lang_zig.rs.liyi.jsonc  (+4 more)
crates/liyi/src/tree_path/inject/: github_actions.rs  github_actions.rs.liyi.jsonc  mod.rs  mod.rs.liyi.jsonc
crates/liyi/tests/: golden.rs  shift_proptest.rs  tree_path_proptest.rs
crates/liyi/tests/fixtures/basic_pass/: example.rs  example.rs.liyi.jsonc
crates/liyi/tests/fixtures/fullwidth_markers/: example.rs.liyi.jsonc
crates/liyi/tests/fixtures/init_discover/: example.rs
crates/liyi/tests/fixtures/init_scaffold_combined/: example.rs
crates/liyi/tests/fixtures/liyiignore/: visible.rs  visible.rs.liyi.jsonc
crates/liyi/tests/fixtures/liyiignore/ignored/: hidden.rs  hidden.rs.liyi.jsonc
crates/liyi/tests/fixtures/missing_related/: work.rs  work.rs.liyi.jsonc
crates/liyi/tests/fixtures/missing_related_pass/: work.rs.liyi.jsonc
crates/liyi/tests/fixtures/multilingual_aliases/: example.rs.liyi.jsonc
crates/liyi/tests/fixtures/orphaned_source/: missing.rs.liyi.jsonc
crates/liyi/tests/fixtures/prompt_output/clean/: hello.rs.liyi.jsonc
crates/liyi/tests/fixtures/prompt_output/errors_only/: code.rs  code.rs.liyi.jsonc
crates/liyi/tests/fixtures/prompt_output/mixed_gaps/: middleware.rs  middleware.rs.liyi.jsonc
crates/liyi/tests/fixtures/prompt_output/multi_file/: alpha.rs  alpha.rs.liyi.jsonc  beta.rs  beta.rs.liyi.jsonc
crates/liyi/tests/fixtures/req_changed/: math.rs  math.rs.liyi.jsonc  rules.rs  rules.rs.liyi.jsonc
crates/liyi/tests/fixtures/req_cycle/: alpha.rs  alpha.rs.liyi.jsonc  beta.rs  beta.rs.liyi.jsonc
crates/liyi/tests/fixtures/semantic_drift/: example.rs.liyi.jsonc
crates/liyi/tests/fixtures/semantic_drift_unreviewed/: example.rs  example.rs.liyi.jsonc
crates/liyi/tests/fixtures/shifted_span/: example.rs.liyi.jsonc
crates/liyi/tests/fixtures/stale_hash/: example.rs
crates/liyi/tests/fixtures/tree_path_recovery/: example.rs  example.rs.liyi.jsonc
crates/liyi/tests/fixtures/trivial_ignore/: example.rs  example.rs.liyi.jsonc
crates/liyi/tests/fixtures/trivial_sidecar/: example.rs  example.rs.liyi.jsonc
crates/liyi/tests/fixtures/unreviewed/: example.rs.liyi.jsonc
docs/: aigc-policy.en.md  aigc-policy.zh.md  approve-impl.md  approve-impl.md.liyi.jsonc  compliance-as-code.en.md  compliance-as-code.zh.md  contributing-guide.en.md  contributing-guide.zh.md  init-discover-impl.md  init-discover-impl.md.liyi.jsonc  injection-impl.md  injection-impl.md.liyi.jsonc  liyi-01x-roadmap.md  liyi-design.md  liyi-design.md.liyi.jsonc  (+11 more)
(+40 files in other folders)
