[package]
name = "liyi-cli"
version = "0.1.0"
edition = "2024"
description = "CLI for 立意 (liyi) — the intent linter"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/liyi-run/liyi"
homepage = "https://github.com/liyi-run/liyi"
readme = "../../README.md"
keywords = ["intent", "linter", "ai-assisted", "cli"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "liyi"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
crossterm = "0.28"
libc = "0.2"
ratatui = "0.29"
serde_json = "1.0"
similar = "2.7.0"
syntect = { version = "5", default-features = false, features = [
  "default-syntaxes",
  "default-themes",
  "parsing",
  "regex-fancy",
] }

liyi = { path = "../liyi" }
