[package]
name = "liyi"
version = "0.1.0"
edition = "2024"
description = "立意 — make intent explicit, persistent, and reviewable in AI-assisted development"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/liyi-run/liyi"
homepage = "https://github.com/liyi-run/liyi"
readme = "../../README.md"
keywords = ["intent", "linter", "ai-assisted", "sidecar", "code-review"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
ignore = "0.4"
nom = "8"
regex = "1"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10"
tree-sitter = "0.26.6"
tree-sitter-bash = "0.25.1"
tree-sitter-c = "0.24.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.25.0"
tree-sitter-kotlin-ng = "1.1.0"
tree-sitter-objc = "3.0.2"
tree-sitter-php = "0.24.2"
tree-sitter-python = "0.25.0"
tree-sitter-ruby = "0.23.1"
tree-sitter-rust = "0.24.0"
tree-sitter-swift = "0.7.1"
tree-sitter-typescript = "0.23.2"
tree-sitter-zig = "1.1.2"

[dev-dependencies]
proptest = "1"
tempfile = "3"
